--- a/Sucessor e antecessor/index.html
+++ b/Sucessor e antecessor/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Antecessor e Sucessor</title>
+</head>
+<body>
+    <header>
+        <h1>Calculando o antecessor e o sucessor</h1>
+    </header>
+    <main>
+        <h2>Informe um número</h2>
+        <form action="numeros.php" method="get">
+            <label for="numero">Digite um número: </label>
+            <input type="number" name="num">
+            <input type="submit" value="Enviar">
+        </form>
+    </main>
+</body>
+</html>
